tests/baselines/reference/wrappedAndRecursiveConstraints2.errors.txt
tests/cases/conformance/types/typeParameters/typeArgumentLists/wrappedAndRecursiveConstraints2.ts(1,9): error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
tests/cases/conformance/types/typeParameters/typeArgumentLists/wrappedAndRecursiveConstraints2.ts(1,19): error TS2464: Illegal reference C in constraint.


==== tests/cases/conformance/types/typeParameters/typeArgumentLists/wrappedAndRecursiveConstraints2.ts (2 errors) ====
    class C<T extends C<T>> { // error
            ~~~~~~~~~~~~~~
!!! error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                      ~~~~
!!! error TS2464: Illegal reference C in constraint.
        constructor(x: T) { }
    }
    
    var c = new C(1);
    var c = new C(new C('')); // error